Fix to work on Safari 13

--- a/timesheet-styles-fixer.css
+++ b/timesheet-styles-fixer.css
@@ -26,6 +26,6 @@
     margin-bottom: 85px;
 }
 
-#mainNavbar > div {
-	position: fixed;
+#mainNavbar {
+	position: fixed !important;
 }
